; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo_drm.c_release_vt.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo_drm.c_release_vt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { %struct.priv* }
%struct.priv = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@USE_MASTER = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [31 x i8] c"Failed to drop DRM master: %s\0A\00", align 1
@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @release_vt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @release_vt(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.vo*, align 8
  %4 = alloca %struct.priv*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.vo*
  store %struct.vo* %6, %struct.vo** %3, align 8
  %7 = load %struct.vo*, %struct.vo** %3, align 8
  %8 = call i32 @crtc_release(%struct.vo* %7)
  %9 = load i64, i64* @USE_MASTER, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %28

11:                                               ; preds = %1
  %12 = load %struct.vo*, %struct.vo** %3, align 8
  %13 = getelementptr inbounds %struct.vo, %struct.vo* %12, i32 0, i32 0
  %14 = load %struct.priv*, %struct.priv** %13, align 8
  store %struct.priv* %14, %struct.priv** %4, align 8
  %15 = load %struct.priv*, %struct.priv** %4, align 8
  %16 = getelementptr inbounds %struct.priv, %struct.priv* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i64 @drmDropMaster(i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %27

22:                                               ; preds = %11
  %23 = load %struct.vo*, %struct.vo** %3, align 8
  %24 = load i32, i32* @errno, align 4
  %25 = call i32 @mp_strerror(i32 %24)
  %26 = call i32 @MP_WARN(%struct.vo* %23, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %25)
  br label %27

27:                                               ; preds = %22, %11
  br label %28

28:                                               ; preds = %27, %1
  ret void
}

declare dso_local i32 @crtc_release(%struct.vo*) #1

declare dso_local i64 @drmDropMaster(i32) #1

declare dso_local i32 @MP_WARN(%struct.vo*, i8*, i32) #1

declare dso_local i32 @mp_strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
